# INSANE.tf2

./: .gitignore  README.md
TestingInsanity/: .editorconfig  CMakeCache.txt  CMakeLists.txt  CreateBuildFiles.bat  MinHook.lib  cmake_install.cmake  cpp.hint
TestingInsanity/INSANITY.tf2/: GlobalVars.cpp  GlobalVars.h  NamingConvention.txt  main.cpp
TestingInsanity/INSANITY.tf2/Extra/: math.h  readme.txt  spacing.cpp  spacing.h
TestingInsanity/INSANITY.tf2/Features/: FeatureHandler.cpp  FeatureHandler.h  Features.cpp  config.h  features.h
TestingInsanity/INSANITY.tf2/Features/Chams/: Chams.h  (+4 more)
TestingInsanity/INSANITY.tf2/Hooks/: CBaseAnimating_SetupBones.cpp  CClientState_Disconnect.cpp  CL_Move.cpp  CNetChan_SendDatagram.cpp  CTFWeaponBaseMelee_CalcIsAttackCritHelper.cpp  CTFWeaponBase_CalcIsAttackCriticalHelper.cpp  CViewRender_RenderView.cpp  C_TFPlayer_GetRenderAngle.cpp  ClientModeShared_LevelInit.cpp  CreateMove.cpp  DrawModelExecutes.cpp  DrawModelExecutes.h  FX_FireBullets.cpp  GetBulletTracers.cpp  GetFogColor.cpp  GetSkyboxFogColor.cpp  GetUserCmd.cpp  IClientRenderable_ShouldDraw.cpp  IStudioRender_DrawModelStaticProp.cpp  PaintTraverse.cpp  R_LoadSky.cpp  ShouldDrawViewModel.cpp  overrideView.cpp  renderGlowEffect.cpp
TestingInsanity/INSANITY.tf2/Libraries/: Timer.h
TestingInsanity/INSANITY.tf2/SDK/: entInfo_t.h
TestingInsanity/INSANITY.tf2/Threads/: Thread2 helper.cpp  thread1.cpp  thread1.h
TestingInsanity/INSANITY.tf2/Utility/: ConsoleLogging.h  ExportFnHelper.cpp  ExportFnHelper.h  Hook_t.cpp  Hook_t.h  Interface.cpp  Interface.h  ModuleNames.h  PullFromAssembly.h  VirtualTableFn.h  signatures.cpp  signatures.h
TestingInsanity/buildNinja/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
(+356 files in other folders)
